header partially styled, fixed some spacing on homepage. we lookin' good.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -16,6 +16,7 @@
     font-weight: italic;
 }
 
+
 /* start custom sass */
 
 body, html {
@@ -29,22 +30,58 @@ body {
 	line-height: 20px;
 }
 
-h1 {
+
+/* link styles */
+
+a:link, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+/* header and footer styles */
+
+.site-header {
+  width: 100%;
+  padding: 1%;
+  border-style: solid;
+  border-width: 0px 0px 2px 0px;
+
+  .site-title {
+    color: #000000;
+  }
+}
+
+.site-footer {
+
+}
+
+h1.title {
 	font-size: 100px;
 }
 
-h2 {
+h2.title {
 	font-size: 80px;
 }
 
-h3 {
+h3.title {
 	font-size: 60px;
 }
 
-h4 {
+h4.title {
 	font-size: 40px;
 }
 
 .center {
 	margin: auto;
+}
+
+.post-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
